Added buttons that actually display the calendars

--- a/cafe-monet-display/src/App.css
+++ b/cafe-monet-display/src/App.css
@@ -179,3 +179,24 @@
   text-wrap: nowrap;
   font-family: 'Courier New', Courier, monospace;
 }
+
+.accent-bar {
+  position: relative;
+  height: 25px;
+  border-top: #000000 1px solid;
+  border-bottom: #000000 1px solid;
+  }
+  ul .accents {
+      list-style-type: none;
+      ;
+      }
+      ul.accents li {
+          display: block;
+          margin-left: 5px;
+          }
+          ul.accents li#first {
+              margin-left: 10px;
+          }
+          ul.accents li#last {
+              margin: 1px 0 0 15px;
+          }
