Added table occupancies and switched some things to constants

--- a/cafe-monet-display/src/App.css
+++ b/cafe-monet-display/src/App.css
@@ -149,6 +149,7 @@
   padding: 12px 15px;
   text-wrap: nowrap;
   font-weight: bold;
+  text-align: center;
 }
 
 .styled-table thead th {
@@ -178,6 +179,35 @@
   min-width: fit-content;
   text-wrap: nowrap;
   font-family: 'Courier New', Courier, monospace;
+  background-color: #fff;
+  border: 1px solid #d5d9d9;
+  border-radius: 8px;
+  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+  box-sizing: border-box;
+  color: #0f1111;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 13px;
+  line-height: 29px;
+  padding: 0 10px 0 11px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  width: 100px;
+}
+
+.calendarButton:hover {
+  background-color: #f7fafa;
+}
+
+.calendarButton:focus {
+  border-color: #008296;
+  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+  outline: 0;
 }
 
 .accent-bar {
@@ -185,18 +215,61 @@
   height: 25px;
   border-top: #000000 1px solid;
   border-bottom: #000000 1px solid;
-  }
-  ul .accents {
-      list-style-type: none;
-      ;
-      }
-      ul.accents li {
-          display: block;
-          margin-left: 5px;
-          }
-          ul.accents li#first {
-              margin-left: 10px;
-          }
-          ul.accents li#last {
-              margin: 1px 0 0 15px;
-          }
+}
+
+ul.accents {
+  list-style-type: none;
+}
+
+ul.accents li {
+  display: block;
+  margin-left: 5px;
+}
+
+ul.accents li#first {
+  margin-left: 10px;
+}
+    
+ul.accents li#last {
+  margin: 1px 0 0 15px;
+}
+
+.timer {
+  align-self: center;
+  font-family: 'Courier New', Courier, monospace;
+  background-color: #fff;
+  border: 1px solid #d5d9d9;
+  border-radius: 8px;
+  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+  box-sizing: border-box;
+  color: #0f1111;
+  display: inline-block;
+  padding: 5px;
+}
+
+.modal {
+  background-color: rgba(0,0,0,0.5);
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: auto;
+  z-index: 99999;
+}
+
+.content {
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 8px;
+  position: sticky;
+  height: 75%;
+  width: 75%;
+  display: grid;
+  grid-template-columns: 1fr;
+  align-items: start;
+  padding: 5px;
+}
