--- a/cafe-monet-display/src/App.css
+++ b/cafe-monet-display/src/App.css
@@ -52,14 +52,31 @@
   text-align: center;
 }
 
+.intro-container {
+  padding: 20px;
+  font-family: 'Courier New', Courier, monospace;
+  align-items: center;
+  width: auto;
+  background-color: bisque;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .btn-container {
   display: flex;
   justify-content: center;
+  display: grid;
+  grid-template-columns: 1fr;
+  align-items: start;
+  padding: 5px;
 }
 
 .btn-primary {
-  background-color: #1e293b;
-  color: white;
+  background-color: white;
+  width: fit-content;
+  color: black;
   padding: 10px 15px;
   border: none;
   border-radius: 4px;
@@ -69,6 +86,7 @@
   display: inline-block;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   transition: background-color 0.3s ease;
+  transition: color 0.3s ease;
   display: flex;
   align-items: center;
   gap: 10px;
@@ -76,6 +94,7 @@
 
 .btn-primary:hover {
   background-color: #334155;
+  color: white;
 }
 
 .user-profile {
@@ -86,7 +105,7 @@
   width: 100vw;
   background-color: #f4f4f4;
   background-image: linear-gradient(to bottom right, #f4f4f4, #eaeaea);
-  font-family: "Helvetica Neue", Arial, sans-serif;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .card {
@@ -126,7 +145,7 @@
   font-size: 14px;
   margin-top: 25px;
   letter-spacing: 1px;
-  font-family: monospace;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .styled-table {
@@ -170,7 +189,7 @@
 
 .overflow-div {
   width: calc(100vw - 50px);
-  height: calc(100vh - 50px);
+  height: calc(75vh - 50px);
   overflow: scroll;
   border: 1px solid #ffffff;
 }
